Fix the machine name and detail button overlap #2

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -40,7 +40,15 @@
     color: mat-color($warn);
   }
 
+  .detailButton {
+    background-color: #fff;
+  }
+
   @if $is-dark {
+    .detailButton {
+      background-color: #424242;
+    }
+
     #app-title button {
       font-style: italic;
       font-weight: 400;
